--- a/Practices/Practice10/table.html
+++ b/Practices/Practice10/table.html
@@ -6,192 +6,208 @@
   <title><Table></title>
 </head>
 <body>
-  <table border="1" cellspacing="0" cellpadding="4">
+  <table width="50%" border="1" cellspacing="0" cellpadding="10">
     <caption><strong>Сильнейшие землетрясения в мире</strong></caption>
+    <colgroup><col span="1" align="center" valign="middle"></colgroup>
+    <thead>
     <tr bgcolor="#bd71ff">
-      <th align="center" valign="top" height="50" width="70">Год</th>
-      <th align="left" valign="top" width="150">Место землетрясения</th>
-      <th valign="top" width="400">Последствия</th>
+      <th>Год</th>
+      <th align="center">Место землетрясения</th>
+      <th valign="top">Последствия</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>1905</td>
+      <td>Хребет Болнай</td>
+      <td>Образовалась трещина длинной 400км</td>
     </tr>
     <tr>
-      <td align="center" valign="top" height="30" width="70">1905</td>
-      <td valign="top">Хребет Болнай</td>
-      <td  valign="top">Образовалась трещина длинной 400км</td>
+      <td>1906</td>
+      <td>Кордильеры</td>
+      <td>Разрушена значительная часть города Сан-Франциско</td>
     </tr>
     <tr>
-      <td align="center" valign="top" height="30" width="70">1906</td>
-      <td valign="top">Кордильеры</td>
-      <td valign="top">Разрушена значительная часть города Сан-Франциско</td>
+      <td>1908</td>
+      <td>Остров Сицилия</td>
+      <td>Разрушен г. Мессина</td>
     </tr>
     <tr>
-      <td align="center" valign="top" height="30" width="70">1908</td>
-      <td valign="top">Остров Сицилия</td>
-      <td valign="top">Разрушен г. Мессина</td>
+      <td>1923</td>
+      <td>Остров Хонсю</td>
+      <td>Опустошены Токио, Йокохама</td>
     </tr>
     <tr>
-      <td align="center" valign="top" height="30" width="70">1923</td>
-      <td valign="top">Остров Хонсю</td>
-      <td valign="top">Опустошены Токио, Йокохама</td>
+      <td>1948</td>
+      <td>Ашхабад</td>
+      <td>Разрушена значительная часть города</td>
     </tr>
     <tr>
-      <td align="center" valign="top" height="30" width="70">1948</td>
-      <td valign="top">Ашхабад</td>
-      <td valign="top">Разрушена значительная часть города</td>
+      <td>1949</td>
+      <td>Курильские острова</td>
+      <td>Цунами высотой до 18 метров</td>
     </tr>
     <tr>
-      <td align="center" valign="top" height="30" width="70">1949</td>
-      <td valign="top">Курильские острова</td>
-      <td valign="top">Цунами высотой до 18 метров</td>
+      <td>1953</td>
+      <td>Ионические острова</td>
+      <td>Часть острова Кефалиния погрузилась  под уровень моря</td>
     </tr>
     <tr>
-      <td align="center" valign="top" height="30" width="70">1953</td>
-      <td valign="top">Ионические острова</td>
-      <td valign="top">Часть острова Кефалиния погрузилась  под уровень моря</td>
+      <td>1963</td>
+      <td>Скопье</td>
+      <td>80% зданий города разрушено</td>
     </tr>
-    <tr>
-      <td align="center" valign="top" height="30" width="70">1963</td>
-      <td valign="top">Скопье</td>
-      <td valign="top">80% зданий города разрушено</td>
-    </tr>
+  </tbody>
   </table><br>
-  <table border="1" cellspacing="0" cellpadding="4">
-    <tr>
-      <td rowspan="2" valign="top" width="170">Название страны</td>
-      <td colspan="2" valign="top" width="150">Население млн. чел</td>
-      <td colspan="2" valign="top" width="180">Плотность чел. на кв км.</td>
-      <td valign="top" rowspan="2" height="70" width="90">Площадь млн. кв. км</td>
-    </tr>
-    <tr>
-      <td valign="top">1970г.</td>
-      <td valign="top">1989г.</td>
-      <td valign="top">1970</td>
-      <td valign="top">1989г.</td>
-    </tr>
-    <tr>
-      <td valign="top" height="30">Австралия и Океания</td>
-      <td valign="top">19</td>
-      <td valign="top">26</td>
-      <td valign="top">2</td>
-      <td valign="top">3</td>
-      <td valign="top">8,5</td>
-    </tr>
-    <tr>
-      <td valign="top" height="30">Африка</td>
-      <td valign="top">361</td>
-      <td valign="top">628</td>
-      <td valign="top">12</td>
-      <td valign="top">21</td>
-      <td valign="top">30,3</td>
-    </tr>
-    <tr>
-      <td valign="top" height="30">Европа</td>
-      <td valign="top">642</td>
-      <td valign="top">701</td>
-      <td valign="top">61</td>
-      <td valign="top">67</td>
-      <td valign="top">10,5</td>
-    </tr>
-    <tr>
-      <td valign="top" height="30">Южная Америка</td>
-      <td valign="top">190</td>
-      <td valign="top">291</td>
-      <td valign="top">11</td>
-      <td valign="top">16</td>
-      <td valign="top">17,8</td>
-    </tr>
-    <tr>
-      <td valign="top" height="50">Северная и <br>Центральная Америка</td>
-      <td valign="top">320</td>
-      <td valign="top">422</td>
-      <td valign="top">13</td>
-      <td valign="top">17</td>
-      <td valign="top">24,3</td>
-    </tr>
-    <tr>
-      <td valign="top" height="30">Азия</td>
-      <td valign="top">2161</td>
-      <td valign="top">3133</td>
-      <td valign="top">49</td>
-      <td valign="top">71</td>
-      <td valign="top">44,4</td>
-    </tr>
-    <tr>
-      <td valign="top" height="30">Весь мир</td>
-      <td valign="top">3693</td>
-      <td valign="top">5201</td>
-      <td valign="top">27</td>
-      <td valign="top">38</td>
-      <td valign="top">135,8</td>
-    </tr>
+  <table width="50%" border="1" cellspacing="0" cellpadding="10">
+    <thead>
+      <tr>
+        <th rowspan="2" valign="middle" align="center">Название страны</th>
+        <th colspan="2" valign="top">Население млн. чел</th>
+        <th colspan="2" valign="top">Плотность чел. на кв км.</th>
+        <th rowspan="2" valign="middle" align="center">Площадь млн. кв. км</th>
+      </tr>
+      <tr>
+        <th valign="top">1970г.</th>
+        <th valign="top">1989г.</th>
+        <th valign="top">1970г.</th>
+        <th valign="top">1989г.</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Австралия и Океания</td>
+        <td>19</td>
+        <td>26</td>
+        <td>2</td>
+        <td>3</td>
+        <td>8,5</td>
+      </tr>
+      <tr>
+        <td>Африка</td>
+        <td>361</td>
+        <td>628</td>
+        <td>12</td>
+        <td>21</td>
+        <td>30,3</td>
+      </tr>
+      <tr>
+        <td>Европа</td>
+        <td>642</td>
+        <td>701</td>
+        <td>61</td>
+        <td>67</td>
+        <td>10,5</td>
+      </tr>
+      <tr>
+        <td>Южная Америка</td>
+        <td>190</td>
+        <td>291</td>
+        <td>11</td>
+        <td>16</td>
+        <td>17,8</td>
+      </tr>
+      <tr>
+        <td>Северная и <br>Центральная Америка</td>
+        <td>320</td>
+        <td>422</td>
+        <td>13</td>
+        <td>17</td>
+        <td>24,3</td>
+      </tr>
+      <tr>
+        <td>Азия</td>
+        <td>2161</td>
+        <td>3133</td>
+        <td>49</td>
+        <td>71</td>
+        <td>44,4</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr bgcolor="#F7C815">
+        <td><b>Весь мир</b></td>
+        <td><b>3693</b></td>
+        <td><b>5201</b></td>
+        <td><b>27</b></td>
+        <td><b>38</b></td>
+        <td><b>135,8</b></td>
+      </tr>
+      </tfoot>
   </table><br>
-  <table border="1" cellspacing="0" cellpadding="4">
+  <table width="50%" border="1" cellspacing="0" cellpadding="10">
     <caption><strong>Высочайшие здания мира</strong></caption>
+    <colgroup> <col span="1" align="center" valign="middle"></colgroup>
+    <thead>
     <tr>
-      <td rowspan="2" height="60" width="35" valign="top" align="center">№</td>
-      <td rowspan="2" align="center" width="150">Название</td>
-      <td colspan="2" valign="top" align="center" height="30">Местоположение</td>
-      <td rowspan="2" valign="top" align="center" width="100">Количество этажей</td>
-      <td rowspan="2" valign="top" align="center" width="60">Высота, <br>м</td>
+      <th rowspan="2">№</th>
+      <th rowspan="2">Название</th>
+      <th colspan="2">Местоположение</th>
+      <th rowspan="2">Количество <br>этажей</th>
+      <th rowspan="2">Высота, <br>м</th>
+    </tr>
+    <tr align="center">
+      <th>Город</th>
+      <th>Страна</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>Тайпей</td>
+      <td>Тайбае</td>
+      <td>Тайвань</td>
+      <td>101</td>
+      <td>508</td>
     </tr>
     <tr>
-      <td valign="top" align="center" height="30" width="110">Город</td>
-      <td valign="top" align="center" width="110">Страна</td>
+      <td>2</td>
+      <td>Петронас</td>
+      <td>Куала-Лумпуре</td>
+      <td>Малайзия</td>
+      <td>88</td>
+      <td>451,9</td>
     </tr>
     <tr>
-      <td height="30" valign="top" align="center">1</td>
-      <td valign="top">Тайпей</td>
-      <td valign="top">Тайбае</td>
-      <td valign="top">Тайвань</td>
-      <td valign="top">101</td>
-      <td valign="top">508</td>
+      <td>3</td>
+      <td>Сирс-Тауэрс</td>
+      <td>Чикаго</td>
+      <td>США</td>
+      <td>110</td>
+      <td>443</td>
     </tr>
     <tr>
-      <td height="30" valign="top" align="center">2</td>
-      <td valign="top">Петронас</td>
-      <td valign="top">Куала-Лумпуре</td>
-      <td valign="top">Малайзия</td>
-      <td valign="top">88</td>
-      <td valign="top">451,9</td>
+      <td>4</td>
+      <td>Джин Мао Тауэр</td>
+      <td>Шанхай</td>
+      <td>Китай</td>
+      <td>88</td>
+      <td>420</td>
     </tr>
     <tr>
-      <td height="30" valign="top" align="center">3</td>
-      <td valign="top">Сирс-Тауэрс</td>
-      <td valign="top">Чикаго</td>
-      <td valign="top">США</td>
-      <td valign="top">110</td>
-      <td valign="top">443</td>
+      <td>5</td>
+      <td>Импайр Стейт <br>Билдинг</td>
+      <td>Нью-Йорк</td>
+      <td>США</td>
+      <td>102</td>
+      <td>381</td>
     </tr>
     <tr>
-      <td height="30" valign="top" align="center">4</td>
-      <td valign="top">Джин Мао Тауэр</td>
-      <td valign="top">Шанхай</td>
-      <td valign="top">Китай</td>
-      <td valign="top">88</td>
-      <td valign="top">420</td>
+      <td>6</td>
+      <td>Бурж аль-Араб</td>
+      <td>Дубай</td>
+      <td>ОАЭ</td>
+      <td>60</td>
+      <td>321</td>
     </tr>
-    <tr>
-      <td height="50" valign="top" align="center">5</td>
-      <td valign="top">Импайр Стейт <br>Билдинг</td>
-      <td valign="top">Нью-Йорк</td>
-      <td valign="top">США</td>
-      <td valign="top">102</td>
-      <td valign="top">381</td>
-    </tr>
-    <tr>
-      <td height="30" valign="top" align="center">6</td>
-      <td valign="top">Бурж аль-Араб</td>
-      <td valign="top">Дубай</td>
-      <td valign="top">ОАЭ</td>
-      <td valign="top">60</td>
-      <td valign="top">321</td>
-    </tr>
+  </tbody>
   </table><br>
-  <table border="1" cellspacing="0" cellpadding="4">
+  <table width="50%" border="1" cellspacing="0" cellpadding="10">
     <colgroup>
-      <col span bgcolor="#6f73de"> 
+      <col span bgcolor="#6f73de" align="center" valign="middle"> 
       <col span bgcolor="#EDC5AB">
       <col span bgcolor="#ffffff">
-      <col span bgcolor="#6f73de">
+      <col span bgcolor="#6f73de" align="center" valign="middle">
       <col span bgcolor="#EDC5AB">
     </colgroup>
     <tr>
